fix schedule wrap

--- a/src/DGGeoclicker/skin/basic/less/dg-schedule.less
+++ b/src/DGGeoclicker/skin/basic/less/dg-schedule.less
@@ -65,11 +65,16 @@
         text-align: center;
         font-size: 0;
         }
+        .dg-schedule__table-cell-group {
+            white-space: nowrap;
+            }
+
         .dg-schedule__tc {
             display: inline-block;
             padding: 2px 0 15px;
             width: 44px;
             vertical-align: top;
+            white-space: normal;
             font-size: 14px;
             }
 
